while 반복문 실습

--- a/6. 반복문 이해하기(while).ipynb
+++ b/6. 반복문 이해하기(while).ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-12-08T05:51:25.009997Z",
-     "start_time": "2021-12-08T05:51:25.005457Z"
+     "end_time": "2021-12-08T06:03:41.490895Z",
+     "start_time": "2021-12-08T06:03:41.486614Z"
     }
    },
    "outputs": [],
@@ -52,14 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-12-08T05:51:38.726618Z",
-     "start_time": "2021-12-08T05:51:38.723917Z"
+     "end_time": "2021-12-08T06:03:41.660797Z",
+     "start_time": "2021-12-08T06:03:41.657424Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 280\n"
+     ]
+    }
+   ],
    "source": [
     "print(idx, sum_a)"
    ]
@@ -74,14 +82,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-12-08T05:54:09.891219Z",
-     "start_time": "2021-12-08T05:54:09.885083Z"
+     "end_time": "2021-12-08T06:03:42.893282Z",
+     "start_time": "2021-12-08T06:03:42.887716Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "작다 작아\n",
+      "작다 작아\n",
+      "앞의 수보다 크다 커\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1, 2, 55, 45, 67, 34, 52, 16, 8]\n",
     "\n",
@@ -106,7 +124,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-08T06:03:31.806019Z",
+     "start_time": "2021-12-08T06:03:27.630591Z"
+    }
+   },
    "outputs": [],
    "source": [
     "while True:\n",
@@ -125,9 +148,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-08T06:03:45.783357Z",
+     "start_time": "2021-12-08T06:03:45.779053Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "작다 작아\n",
+      "작다 작아\n",
+      "앞의 수보다 크다 커\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1, 2, 55, 45, 67, 34, 52, 16, 8]\n",
     "\n",
@@ -152,11 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-12-08T06:00:11.077980Z",
-     "start_time": "2021-12-08T06:00:11.074730Z"
+     "end_time": "2021-12-08T06:03:48.589364Z",
+     "start_time": "2021-12-08T06:03:48.586270Z"
     },
     "code_folding": []
    },
