--- a/7. 반복문 이해하기(for).ipynb
+++ b/7. 반복문 이해하기(for).ipynb
@@ -69,10 +69,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-08T06:03:16.832015Z",
+     "start_time": "2021-12-08T06:03:16.828794Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4, 5, 6]\n",
+    "for i in a:\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,10 +109,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-08T06:05:06.927607Z",
+     "start_time": "2021-12-08T06:05:06.923992Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {'a': 0, 'b': 1, 'c': 2, 'd': 3}\n",
+    "for k in a :\n",
+    "    print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-08T06:05:25.842877Z",
+     "start_time": "2021-12-08T06:05:25.838785Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for v in a.values():\n",
+    "    print(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-08T06:05:50.320176Z",
+     "start_time": "2021-12-08T06:05:50.316961Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 0\n",
+      "b 1\n",
+      "c 2\n",
+      "d 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in a.items():\n",
+    "    print(k, v)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +203,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-08T06:06:19.607200Z",
+     "start_time": "2021-12-08T06:06:19.601953Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 2\n",
+      "2 3\n",
+      "3 4\n",
+      "4 5\n",
+      "5 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4, 5, 6]\n",
+    "for i, v in enumerate(a):\n",
+    "    print(i, v) # index, value"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -124,10 +240,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-08T06:06:59.895026Z",
+     "start_time": "2021-12-08T06:06:59.891470Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4, 5, 6]\n",
+    "for i in a:\n",
+    "    if i ==4 :\n",
+    "        break\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,10 +276,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-08T06:07:54.786123Z",
+     "start_time": "2021-12-08T06:07:54.781894Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4, 5, 6]\n",
+    "for i in a:\n",
+    "    if i % 2 :  # if i % 2 != 0\n",
+    "        continue\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,10 +329,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-08T06:09:37.292566Z",
+     "start_time": "2021-12-08T06:09:37.278462Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 x 1 = 2\n",
+      "2 x 2 = 4\n",
+      "2 x 3 = 6\n",
+      "2 x 4 = 8\n",
+      "2 x 5 = 10\n",
+      "2 x 6 = 12\n",
+      "2 x 7 = 14\n",
+      "2 x 8 = 16\n",
+      "2 x 9 = 18\n",
+      "3 x 1 = 3\n",
+      "3 x 2 = 6\n",
+      "3 x 3 = 9\n",
+      "3 x 4 = 12\n",
+      "3 x 5 = 15\n",
+      "3 x 6 = 18\n",
+      "3 x 7 = 21\n",
+      "3 x 8 = 24\n",
+      "3 x 9 = 27\n",
+      "4 x 1 = 4\n",
+      "4 x 2 = 8\n",
+      "4 x 3 = 12\n",
+      "4 x 4 = 16\n",
+      "4 x 5 = 20\n",
+      "4 x 6 = 24\n",
+      "4 x 7 = 28\n",
+      "4 x 8 = 32\n",
+      "4 x 9 = 36\n",
+      "5 x 1 = 5\n",
+      "5 x 2 = 10\n",
+      "5 x 3 = 15\n",
+      "5 x 4 = 20\n",
+      "5 x 5 = 25\n",
+      "5 x 6 = 30\n",
+      "5 x 7 = 35\n",
+      "5 x 8 = 40\n",
+      "5 x 9 = 45\n",
+      "6 x 1 = 6\n",
+      "6 x 2 = 12\n",
+      "6 x 3 = 18\n",
+      "6 x 4 = 24\n",
+      "6 x 5 = 30\n",
+      "6 x 6 = 36\n",
+      "6 x 7 = 42\n",
+      "6 x 8 = 48\n",
+      "6 x 9 = 54\n",
+      "7 x 1 = 7\n",
+      "7 x 2 = 14\n",
+      "7 x 3 = 21\n",
+      "7 x 4 = 28\n",
+      "7 x 5 = 35\n",
+      "7 x 6 = 42\n",
+      "7 x 7 = 49\n",
+      "7 x 8 = 56\n",
+      "7 x 9 = 63\n",
+      "8 x 1 = 8\n",
+      "8 x 2 = 16\n",
+      "8 x 3 = 24\n",
+      "8 x 4 = 32\n",
+      "8 x 5 = 40\n",
+      "8 x 6 = 48\n",
+      "8 x 7 = 56\n",
+      "8 x 8 = 64\n",
+      "8 x 9 = 72\n",
+      "9 x 1 = 9\n",
+      "9 x 2 = 18\n",
+      "9 x 3 = 27\n",
+      "9 x 4 = 36\n",
+      "9 x 5 = 45\n",
+      "9 x 6 = 54\n",
+      "9 x 7 = 63\n",
+      "9 x 8 = 72\n",
+      "9 x 9 = 81\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2, 10):\n",
+    "    for k in range(1, 10):\n",
+    "        print(i, 'x', k, '=', i*k)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -215,15 +461,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 1 - 100까지의 리스트 생성하기"
+    "* 1 - 10까지의 리스트 생성하기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-08T06:10:25.355279Z",
+     "start_time": "2021-12-08T06:10:25.346416Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(1,11))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -236,30 +501,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-08T06:10:53.864402Z",
+     "start_time": "2021-12-08T06:10:53.857025Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5,\n",
+       " 10,\n",
+       " 15,\n",
+       " 20,\n",
+       " 25,\n",
+       " 30,\n",
+       " 35,\n",
+       " 40,\n",
+       " 45,\n",
+       " 50,\n",
+       " 55,\n",
+       " 60,\n",
+       " 65,\n",
+       " 70,\n",
+       " 75,\n",
+       " 80,\n",
+       " 85,\n",
+       " 90,\n",
+       " 95,\n",
+       " 100]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### if & for 연습문제\n",
-    "   \n",
-    "  1. 구구단을 2 - 9단까지 출력하시오.\n",
-    "  2. 1 - 100까지 정수 중 2의 배수 또는 11의 배수를 모두 출력하시오. \n",
-    "  4. a = [22, 1, 3, 4, 7, 98, 21, 55, 87, 99, 19, 20, 45] 에서 최대값과 최소값을 찾으시오. (sorted, sort 사용 금지)\n",
-    "  5. a = [22, 1, 3, 4, 7, 98, 21, 55, 87, 99, 19, 20, 45] 에서 평균을 구하세요.\n",
-    "  "
+    "[i for i in range(1,101) if i % 5 == 0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
